@@ -34,10 +34,14 @@ setup(
     license='BSD',
     url='http://trac-hacks.org/wiki/TagsPlugin',
     description='Tags plugin for Trac',
-    entry_points = {'trac.plugins': ['tractags = tractags']},
     dependency_links=['http://svn.edgewall.org/repos/genshi/trunk#egg=Genshi-dev'],
     install_requires=['Genshi >= 0.5', 'Trac >= 0.11'],
-    extras_require={'Babel': 'Babel>= 0.9.5', 'Trac': 'Trac >= 0.12'},
+    extras_require={
+        'babel': 'Babel>= 0.9.5',
+        'tracrpc': 'TracXMLRPC >= 1.1.0'},
+    entry_points = {'trac.plugins': [
+        'tractags = tractags',
+        'tractags.xmlrpc = tractags.xmlrpc[tracrpc]']},
     test_suite = 'tractags.tests.test_suite',
     tests_require = [],
     **extra
