@@ -1,0 +1,78 @@
+# -*- coding: utf-8 -*-
+#
+# Copyright (C) 2014 Steffen Hoffmann <hoff.st@web.de>
+#
+# This software is licensed as described in the file COPYING, which
+# you should have received as part of this distribution.
+#
+
+import shutil
+import tempfile
+import unittest
+
+from trac.db.api import DatabaseManager
+from trac.perm import PermissionCache, PermissionError, PermissionSystem
+from trac.resource import Resource
+from trac.test import EnvironmentStub, Mock, MockPerm
+
+from tractags.api import TagSystem
+from tractags.db import TagSetup
+from tractags.xmlrpc import TagRPC
+
+
+class TagRPCTestCase(unittest.TestCase):
+
+    def setUp(self):
+        self.env = EnvironmentStub(default_data=True,
+                                   enable=['trac.*', 'tractags.*'])
+        self.env.path = tempfile.mkdtemp()
+        self.db = self.env.get_db_cnx()
+        setup = TagSetup(self.env)
+        # Current tractags schema is partially setup with enabled component.
+        #   Revert these changes for getting a clean setup.
+        self._revert_tractags_schema_init()
+        setup.upgrade_environment(self.db)
+
+        self.perms = PermissionSystem(self.env)
+        self.tag_s = TagSystem(self.env)
+
+        cursor = self.db.cursor()
+        # Populate table with initial test data.
+        cursor.execute("""
+            INSERT INTO tags
+                   (tagspace, name, tag)
+            VALUES ('wiki', 'WikiStart', 'tag1')
+        """)
+
+        self.req = Mock(authname='editor')
+        # Mock an anonymous request.
+        self.req.perm = PermissionCache(self.env)
+
+    def tearDown(self):
+        self.db.close()
+        # Really close db connections.
+        self.env.shutdown()
+        shutil.rmtree(self.env.path)
+
+    # Helpers
+
+    def _revert_tractags_schema_init(self):
+        cursor = self.db.cursor()
+        cursor.execute("DROP TABLE IF EXISTS tags")
+        cursor.execute("DROP TABLE IF EXISTS tags_change")
+        cursor.execute("DELETE FROM system WHERE name='tags_version'")
+        cursor.execute("DELETE FROM permission WHERE action %s"
+                       % self.db.like(), ('TAGS_%',))
+
+    # Tests
+
+    def test_init(self):
+        TagRPC(self.env)
+
+def test_suite():
+    suite = unittest.TestSuite()
+    suite.addTest(unittest.makeSuite(TagRPCTestCase, 'test'))
+    return suite
+
+if __name__ == '__main__':
+    unittest.main(defaultTest='test_suite')
